--- a/入库单_1.html
+++ b/入库单_1.html
@@ -427,7 +427,7 @@
             <div id="u21346_div" class="u21346_div"></div>
             <!-- Unnamed () -->
             <div id="u21347" class="u21347 text" style="visibility: visible;">
-              <p><span>已锁定库存</span></p>
+              <p><span>已发出</span></p>
             </div>
           </div>
 
@@ -613,7 +613,7 @@
             <div id="u21346-1_div" class="u21346_div"></div>
             <!-- Unnamed () -->
             <div id="u21347-1" class="u21347 text" style="visibility: visible;">
-              <p><span>已锁定库存</span></p>
+              <p><span>已发出</span></p>
             </div>
           </div>
 
@@ -799,7 +799,7 @@
             <div id="u21346-2_div" class="u21346_div"></div>
             <!-- Unnamed () -->
             <div id="u21347-2" class="u21347 text" style="visibility: visible;">
-              <p><span>已锁定库存</span></p>
+              <p><span>已发出</span></p>
             </div>
           </div>
 
@@ -985,7 +985,7 @@
             <div id="u21346-3_div" class="u21346_div"></div>
             <!-- Unnamed () -->
             <div id="u21347-3" class="u21347 text" style="visibility: visible;">
-              <p><span>已锁定库存</span></p>
+              <p><span>已发出</span></p>
             </div>
           </div>
 
@@ -1171,7 +1171,7 @@
             <div id="u21346-4_div" class="u21346_div"></div>
             <!-- Unnamed () -->
             <div id="u21347-4" class="u21347 text" style="visibility: visible;">
-              <p><span>已锁定库存</span></p>
+              <p><span>已发出</span></p>
             </div>
           </div>
 
@@ -2115,9 +2115,9 @@
         </div>
       </div>
 
-      <!-- 下拉弹层--配送单列表 (Dynamic Panel) -->
-      <div id="u21542" class="ax_default ax_default_hidden" data-label="下拉弹层--配送单列表" style="display: none; visibility: hidden">
-        <div id="u21542_state0" class="panel_state" data-label="查看配送详情">
+      <!-- 下拉弹层--入库单列表 (Dynamic Panel) -->
+      <div id="u21542" class="ax_default ax_default_hidden" data-label="下拉弹层--入库单列表" style="display: none; visibility: hidden">
+        <div id="u21542_state0" class="panel_state" data-label="查看入库单详情">
           <div id="u21542_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
@@ -2214,7 +2214,7 @@
                             <div id="u21563_div" class=""></div>
                             <!-- Unnamed () -->
                             <div id="u21564" class="text" style="visibility: visible;">
-                              <p><span>价格</span></p>
+                              <p><span>批号</span></p>
                             </div>
                           </div>
 
@@ -2299,7 +2299,7 @@
                               <div id="u21582_div" class="u21582_div"></div>
                               <!-- Unnamed () -->
                               <div id="u21583" class="u21583 text" style="visibility: visible;">
-                                <p><span>价格</span></p>
+                                <p><span>2018-01-05</span></p>
                               </div>
                             </div>
 
@@ -2321,7 +2321,7 @@
                               </div>
                             </div>
                           </script>
-                          <div id="u21570-1" class="preeval" style="width: 1257px; height: 50px;">
+                          <div id="u21570-1" class="preeval" style="width: 1258px; height: 50px;">
 
                             <!-- Unnamed (Group) -->
                             <div id="u21571-1" class="ax_default u21571">
@@ -2377,7 +2377,7 @@
                               <div id="u21582-1_div" class="u21582_div"></div>
                               <!-- Unnamed () -->
                               <div id="u21583-1" class="u21583 text" style="visibility: visible;">
-                                <p><span>238.80&nbsp; &nbsp;&nbsp; </span></p>
+                                <p><span>2018-01-05</span></p>
                               </div>
                             </div>
 
@@ -2399,7 +2399,7 @@
                               </div>
                             </div>
                           </div>
-                          <div id="u21570-2" class="preeval" style="width: 1257px; height: 50px;">
+                          <div id="u21570-2" class="preeval" style="width: 1258px; height: 50px;">
 
                             <!-- Unnamed (Group) -->
                             <div id="u21571-2" class="ax_default u21571">
@@ -2455,7 +2455,7 @@
                               <div id="u21582-2_div" class="u21582_div"></div>
                               <!-- Unnamed () -->
                               <div id="u21583-2" class="u21583 text" style="visibility: visible;">
-                                <p><span>238.80</span></p>
+                                <p><span>2018-03-05</span></p>
                               </div>
                             </div>
 
@@ -2846,7 +2846,7 @@
               <div id="u21642_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u21643" class="text" style="visibility: visible;">
-                <p><span>订单信息</span></p>
+                <p><span>&nbsp; 订单信息</span></p>
               </div>
             </div>
 
@@ -2855,7 +2855,7 @@
               <div id="u21644_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u21645" class="text" style="visibility: visible;">
-                <p><span>配送单号&nbsp; SO180114349213&nbsp;&nbsp; </span></p>
+                <p><span>入库单号： NO180114349213&nbsp;&nbsp; </span></p>
               </div>
             </div>
 
@@ -2864,7 +2864,7 @@
               <div id="u21646_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u21647" class="text" style="visibility: visible;">
-                <p><span>原单号&nbsp; SA180102015914-2-2-2-2-2-2-2-2&nbsp;&nbsp; </span></p>
+                <p><span>原单号：&nbsp; NO1801143492211</span></p>
               </div>
             </div>
 
@@ -2873,7 +2873,7 @@
               <div id="u21648_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u21649" class="text" style="visibility: visible;">
-                <p><span>取货地址&nbsp; 辽宁大连市甘井子区华北路西北侧DC（大连铁越仓）&nbsp;&nbsp; </span></p>
+                <p><span>&nbsp;&nbsp;&nbsp; 平台商： 亚洲渔港</span></p>
               </div>
             </div>
 
@@ -2882,115 +2882,43 @@
               <div id="u21650_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u21651" class="text" style="visibility: visible;">
-                <p><span>到货地址&nbsp; 安徽合肥市肥东县安徽省合肥市肥东县青年路与唐安路交叉口大众冷链 同庆楼餐饮股&nbsp; &nbsp; </span></p>
+                <p><span>&nbsp;&nbsp;&nbsp; 入库仓： DC（大连铁越仓）&nbsp;&nbsp; </span></p>
               </div>
             </div>
 
-            <!-- Unnamed (Rectangle) -->
-            <div id="u21652" class="ax_default box_1">
-              <div id="u21652_div" class=""></div>
+            <!-- Unnamed (Paragraph) -->
+            <div id="u21652" class="ax_default paragraph">
+              <img id="u21652_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
-              <div id="u21653" class="text" style="display: none; visibility: hidden">
-                <p><span></span></p>
+              <div id="u21653" class="text" style="visibility: visible;">
+                <p><span>&nbsp; 下单时间： 2018-01-14 17:15:20&nbsp; &nbsp; &nbsp;&nbsp; 收货时间：2018-01-14 00:00:00</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u21654" class="ax_default box_1">
+            <div id="u21654" class="ax_default shape">
               <div id="u21654_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u21655" class="text" style="visibility: visible;">
-                <p><span>物流信息</span></p>
+                <p><span>返回</span></p>
               </div>
             </div>
 
-            <!-- Unnamed (Paragraph) -->
-            <div id="u21656" class="ax_default paragraph">
-              <img id="u21656_img" class="img " src="resources/images/transparent.gif"/>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u21656" class="ax_default label">
+              <div id="u21656_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u21657" class="text" style="visibility: visible;">
-                <p><span>份有限公司</span></p>
+                <p><span>运单号：&nbsp; SO180114349213&nbsp;&nbsp; </span></p>
               </div>
             </div>
 
-            <!-- Unnamed (Paragraph) -->
-            <div id="u21658" class="ax_default paragraph">
-              <img id="u21658_img" class="img " src="resources/images/transparent.gif"/>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u21658" class="ax_default label">
+              <div id="u21658_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u21659" class="text" style="visibility: visible;">
-                <p><span>提交时间&nbsp;&nbsp; 2018-01-14 17:15:20</span></p><p><span><br></span></p><p><span>需求时间&nbsp;&nbsp; 2018-01-14 00:00:00</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u21660" class="ax_default label">
-              <div id="u21660_div" class=""></div>
-              <!-- Unnamed () -->
-              <div id="u21661" class="text" style="visibility: visible;">
-                <p><span>运单号&nbsp; SO180114349213&nbsp;&nbsp; </span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u21662" class="ax_default label">
-              <div id="u21662_div" class=""></div>
-              <!-- Unnamed () -->
-              <div id="u21663" class="text" style="visibility: visible;">
-                <p><span>物流商信息&nbsp; 德邦物流&nbsp;&nbsp; </span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u21664" class="ax_default label">
-              <div id="u21664_div" class=""></div>
-              <!-- Unnamed () -->
-              <div id="u21665" class="text" style="visibility: visible;">
-                <p><span>司机信息&nbsp; 孙洪林-孙洪林-18641152790</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Paragraph) -->
-            <div id="u21666" class="ax_default paragraph">
-              <img id="u21666_img" class="img " src="resources/images/transparent.gif"/>
-              <!-- Unnamed () -->
-              <div id="u21667" class="text" style="visibility: visible;">
-                <p><span>发货时间&nbsp; 2018-01-14 17:15:20</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Paragraph) -->
-            <div id="u21668" class="ax_default paragraph">
-              <img id="u21668_img" class="img " src="resources/images/transparent.gif"/>
-              <!-- Unnamed () -->
-              <div id="u21669" class="text" style="visibility: visible;">
-                <p><span>发货线路&nbsp; 江浙剩余</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u21670" class="ax_default label">
-              <div id="u21670_div" class=""></div>
-              <!-- Unnamed () -->
-              <div id="u21671" class="text" style="visibility: visible;">
-                <p><span>落点信息&nbsp; 孙洪艳-18641152790-辽B8090B</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u21672" class="ax_default label">
-              <div id="u21672_div" class=""></div>
-              <!-- Unnamed () -->
-              <div id="u21673" class="text" style="visibility: visible;">
-                <p><span>状态&nbsp; 已锁定库存</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u21674" class="ax_default shape">
-              <div id="u21674_div" class=""></div>
-              <!-- Unnamed () -->
-              <div id="u21675" class="text" style="visibility: visible;">
-                <p><span>返回</span></p>
+                <p><span>&nbsp;&nbsp;&nbsp; 订单状态： 未执行&nbsp;&nbsp; </span></p>
               </div>
             </div>
           </div>
@@ -2998,37 +2926,37 @@
       </div>
 
       <!-- 装车顺序 (Rectangle) -->
-      <div id="u21676" class="ax_default label" data-label="装车顺序">
-        <div id="u21676_div" class=""></div>
+      <div id="u21660" class="ax_default label" data-label="装车顺序">
+        <div id="u21660_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u21677" class="text" style="visibility: visible;">
+        <div id="u21661" class="text" style="visibility: visible;">
           <p><span>入库仓</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u21678" class="ax_default image">
-        <img id="u21678_img" class="img " src="images/配送单下单/u3901.png"/>
+      <div id="u21662" class="ax_default image">
+        <img id="u21662_img" class="img " src="images/配送单下单/u3901.png"/>
         <!-- Unnamed () -->
-        <div id="u21679" class="text" style="display: none; visibility: hidden">
+        <div id="u21663" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) [footnote] -->
-      <div id="u21678_ann" class="annotation"></div>
+      <div id="u21662_ann" class="annotation"></div>
 
       <!-- Unnamed (Image) -->
-      <div id="u21680" class="ax_default image">
-        <img id="u21680_img" class="img " src="images/配送单下单/u3901.png"/>
+      <div id="u21664" class="ax_default image">
+        <img id="u21664_img" class="img " src="images/配送单下单/u3901.png"/>
         <!-- Unnamed () -->
-        <div id="u21681" class="text" style="display: none; visibility: hidden">
+        <div id="u21665" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) [footnote] -->
-      <div id="u21680_ann" class="annotation"></div>
+      <div id="u21664_ann" class="annotation"></div>
     </div>
   </body>
 </html>
